tests/language_tests/pass/0105_nested_unary_negate.ee
fn main() {
    println(---5);
    println(--5);
}
