tests/language_tests/fail/0067_double_left_modulo.ee
fn main() {
    print(5.5 % 2);
}
